src/objects/Solar_Loan_Syndication__c.object
<CustomObject>
    <description>Bank Contacts and the related chatter feed</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>xxAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>xxPlatform Finance</relationshipLabel>
        <relationshipName>Platform_Finance</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>today() - Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxAge (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Close_Date__c</fullName>
        <label>xxAnticipated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>xxActual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxClosing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deep_Diligence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxDeep Diligence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dropped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxDropped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalize_Agreements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxFinalize Agreements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indication_of_Interest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxIndication of Interest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Outreach__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxInitial Outreach</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intro_Call_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxIntro Call/Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Management_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxManagement Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxNDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_S_Markups__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxP&amp;S Markups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preliminary_Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxPreliminary Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>xxStart Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>xxStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                    <default>true</default>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>No Response Yet</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>In Discussion</fullName>
                </value>
                <value>
                    <fullName>Transaction Under Way</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Contacted and Dropped</fullName>
                    <isActive>false</isActive>
                    <label>Contacted and Dropped</label>
                </value>
                <value>
                    <fullName>Initial Stage of Conversations</fullName>
                    <isActive>false</isActive>
                    <label>Initial Stage of Conversations</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teaser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>xxTeaser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>xxTransaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Both</fullName>
                    <default>true</default>
                    <label>Loan Sales/Warehouse</label>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Loan Sales</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>xxPlatform Finance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>xxPlatform Finance</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>